examples/type_system/failing/143_match_bool_missing_false.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/143_match_bool_missing_false.flx
// error[E015]: Non-Exhaustive Match
//
// Match is not exhaustive: 1 missing pattern.
//
//   examples/type_system/failing/143_match_bool_missing_false.flx:27:14
//    |
// 27 |     let _x = match b {
//    |              ^^^^^^^^^
// 28 |         true -> 1
//    | ^^^^^^^^^^^^^^^^^
// 29 |     }
//    | ^^^^^
//
// Hint:
//   Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E015

// E015: Bool match missing false branch.
fn main() -> Unit {
    let b = true
    let _x = match b {
        true -> 1
    }
}
